# tieteellinen_laskin

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  testausraportti.md  toteutusraportti.md  vaatimusmaarittely.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: index.py  laskin.py  ui.py
src/services/: rpn_evaluointi.py  shunting_yard.py  validointi.py
src/tests/: laskin_test.py  rpn_evaluointi_test.py  shunting_yard_test.py  ui_test.py  validointi_test.py
viikkoraportit/: viikko1.md
