[tool.poetry]
name = "tieteellinen_laskin"
version = "0.1.0"
description = ""
authors = ["Sari Bäckman <sari.m.backman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
